[package]
name = "srp_server"
version = "0.1.0"
authors = ["redshiftzero <jen@freedom.press>"]
edition = "2018"

[dependencies]
secure_remote_password = { path = "../secure_remote_password" }
num-bigint = {version = "0.3.0", features = ["rand"] }
rand = { version="0.7.3", features=["getrandom"]}
sha2 = "0.9.2"
